# novel2script

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  剧本YAML-Schema设计.md
backend/: README.md
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: settings.py
backend/app/prompts/: __init__.py  script_generation.py
backend/app/schemas/: __init__.py  script.py
backend/app/services/: __init__.py  chapter_parser.py  llm_client.py  mock_generator.py  script_generator.py  story_extractor.py
backend/tests/: test_api.py
docs/: 剧本YAML-Schema设计.md  开发计划与PR拆分.md  技术方案.md  需求分析.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/services/: scriptApi.ts
frontend/src/types/: script.ts
samples/: README.md  测试内容示例
